--- a/.gitignore
+++ b/.gitignore
@@ -110,7 +110,9 @@ ipython_config.py
 .pdm.toml
 .pdm-python
 .pdm-build/
-.code-workspace
+*.code-workspace
+*.csv
+*.json
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
