--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,7 @@ ipython_config.py
 *.code-workspace
 *.csv
 *.json
+proxy_list.py
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
