--- a/requirements.txt
+++ b/requirements.txt
@@ -12,24 +12,36 @@ black==24.8.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+exceptiongroup==1.2.2
 frozenlist==1.4.1
+greenlet==3.0.3
+h11==0.14.0
 idna==3.10
 iso8601==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
+outcome==1.3.0.post0
 packaging==24.1
 pathspec==0.12.1
 platformdirs==4.3.3
+playwright==1.47.0
 pydantic==2.9.1
 pydantic_core==2.23.3
+pyee==12.0.0
 pypika-tortoise==0.1.6
+PySocks==1.7.1
 python-dotenv==1.0.1
 pytz==2024.2
-requests==2.32.3
 schedule==1.2.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
 tomli==2.0.1
 tortoise==0.1.1
 tortoise-orm==0.21.6
+trio==0.26.2
+trio-websocket==0.11.1
 typing_extensions==4.12.2
 urllib3==2.2.3
+websocket-client==1.8.0
+wsproto==1.2.0
 yarl==1.11.1
