--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,19 @@
-COINMARKETCAP_API_KEY ='your coinmarketcap.com api key'
-db_path="postgres://user:password@localhost:5432/db_name"
+#api key для coinmarketcap
+COINMARKETCAP_API_KEY 'your coinmarketcap.com api key'
+
+
+#путь в бд
+db_path=="postgres://user:password@localhost:5432/db_name" 
+
+#список товаров для поиска
+goods="копье,дуршлаг,красные носки,леска для спиннинга"
+
+#частота запроса к биржам в секундах
+crypto_frequency = '90' 
+
+#частота запроса к маркетлейсам в секундах
+mp_frequency = '10'   
+
+#порог разницы цен
+crypto_threshold = '0.0003' 
+
